JumpScript/tests/baselines/reference/parser512084.errors.txt
tests/cases/conformance/parser/ecmascript5/RegressionTests/parser512084.jump(2,1): error TS1005: '}' expected.


==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser512084.jump (1 errors) ====
    class foo {
    
    
!!! error TS1005: '}' expected.